# video-merger

./: .editorconfig  .envrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ap0117_ApRuleLblMaintainAps.docx  ap0117_ApRuleLblMaintainAps_formatted.docx  pyproject.toml  requirements.txt  setup.cfg  setup.py
examples/: advanced_usage.py  basic_usage.py  docx_formatting_config.py  docx_formatting_default_styles.py  docx_formatting_example.py
sample_docs/: default_styles_output.docx  formatted_document.docx  formatted_output.docx  test_document.docx
sample_docs/batch_input/: document1.docx  document2.docx
src/myproject/: __init__.py  docx_formatter.py  subtitle_generator.py  video_merger.py
tests/: test_calculator.py  test_docx_formatter.py  test_video_merger.py
