[metadata]
name = myproject
description = 视频合并工具
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/username/video-merger
author = Jonathan
author_email = jonathan@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    ffmpeg-python
    vosk
    srt

[options.packages.find]
where = src

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*